scrollbar height fixed

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -4608,9 +4608,6 @@ html {
 .cursor-pointer {
 	cursor: pointer;
 }
-.cursor-not-allowed {
-	cursor: not-allowed;
-}
 .resize-none {
 	resize: none;
 }
@@ -4953,14 +4950,6 @@ html {
 .bg-primary {
 	--tw-bg-opacity: 1;
 	background-color: hsla(var(--p) / var(--tw-bg-opacity));
-}
-.bg-secondary {
-	--tw-bg-opacity: 1;
-	background-color: hsla(var(--s) / var(--tw-bg-opacity));
-}
-.bg-error {
-	--tw-bg-opacity: 1;
-	background-color: hsla(var(--er) / var(--tw-bg-opacity));
 }
 .bg-gray-400 {
 	--tw-bg-opacity: 1;
@@ -5481,6 +5470,7 @@ html {
 /* Scrollbars styling */
 /* width */
 ::-webkit-scrollbar {
+	height: 0.75rem;
 	width: 0.75rem;
     /* width: 13px;
     height: 16px; */
